## START
v2328
 - NOTE that queries of type 1 may not work as expected due to an issue at S2
 - implement query type 2
 - remove unused features from type 1 query cards
 - try to handle SSLException
 - fix: query type 1 stopped at 2000
 - fix: query type 1 shows no progress indicator

v2327
 - bulk access via S2API keys
 - new query type: bulk expression search (requires S2API key)
 - automatic bulk data download if S2API key present
 - trash button in query card
 - fix: query (name) already exists (new query dialog)
 - fix: no DOIS on create: Accepted: 1
 - fix: new query dialog checkvalue

v2326.1
 - hotfix: HTTP 504 from S2

v2326
 - hotfix: new query dialog regression

v2325
 - DOI: simply remove all before "10."
 - warning if no DOI returns any ref
 - "Accept all" button on filter2 screen

v2324
 - help tooltips in all settings dialogs
 - set bold accepted according to max-cache-days
 - fix: tooltips removed centered layout
 - fix: only first doi link insertable
 - fix: focus in annotation screen
 - fix: accepted was not touched when 0 new in filter1,2
 - doc: can I edit keywords?

v2323
 - fix: crash when queries/directory can't be written
 - fix: don't allow '/' in query name
 - fix: when pasting URL into DOI field, do decode

v2322
 - show changes in about()
 - you can now use DOI URLs in settings
 - check logical expression validity on dialog confirm
 - fix: URL("Unicode NBSP") error
 - fix: new queries are not sorted into list
 - fix: keyboard focus on list can be lost
 - fix: dismissing "Complete Settings" without keywords will advance status

v2321
 - keyword settings support logical expressions
 - publication date stats
 - reduce binary size, remove extended icons

v2320
 - advanced settings
 - reduce delay between HTML queries
 - doc: images

v2319:
 - scholar link goes to PubMed if PMID exists
 - show PMID in paper details
 - doc: AI classifier
 - fix "null" shown as paper year

v2318:
 - use platform-specific home dir as path-to-queries

v2317: